--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
-h1{
-    font-size: 30px;
+h1 {
+    font-size: 60px;
+    text-align: center;
 }
-h2{
+
+h2 {
     font-size: 20px;
+}
+
+body {
+    background-color: rgb(226, 250, 252);
+}
+h4 {
+    font-size: 18px;
 }
